[fixes #103187492] Adjusted the spacing of home page elements

--- a/codango/account/static/css/home.css
+++ b/codango/account/static/css/home.css
@@ -18,12 +18,8 @@ textarea {
     margin-bottom: 50px;
 }
 
-h3 {
-	margin-left: 15%;
-}
-
 #more {
-	margin-left: 30%;
+	margin-left: 40%;
 	margin-bottom: 40px;
 }
 
@@ -37,4 +33,18 @@ h3 {
 
 #item {
 	margin: 0px 10px;
+}
+
+@media (min-width: 768px) {
+	h3 {
+	margin-left: 15%;
+	}
+
+	h6 {
+		margin-left: 10%;
+	}
+
+	#more {
+		margin-left: 30%;
+	}
 }
